<resources>
    <string name="app_name">Melodate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="melodate">Melodate</string>
    <string name="chat">Chat</string>
    <string name="get_started">Get started!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="melodate_slogan">Find Your Harmony in the \nPerfect Match</string>
    <string name="melodate_description">A dating app connecting people through shared music vibes. Find your perfect match!</string>

    <string name="toolbar_title">Toolbar Title</string>
    <string name="profile_text">Profile</string>
    <string name="chat_text">Chat</string>
    <string name="name">Haewon, 21</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="preferences">Preferences</string>
    <string name="push_notification">Push Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_switch">Dark Mode Switch</string>
    <string name="other">Other</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="push_notification_switch">Push Notification Switch</string>

    <string name="next_action">Next Action</string>
    <string name="back_action">Back Action</string>
    <string name="email_hint">Email</string>
    <string name="email_example">example@email.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="email_not_valid">Email is invalid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Marcus, 20</string>
    <string name="play_button_description">Play Button</string>

    <string name="song_title">Supernatural</string>
    <string name="artist_name">New Jeans</string>
    <string name="profile_description">I like a move it, move it. I looking in finance, 6.5, blue eyes, and like jazz 🎺</string>
    <string name="music_interest">Music Interest</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="gender">Female</string>
    <string name="religion">Catholic</string>
    <string name="smoke">No</string>
    <string name="drink">Often</string>
    <string name="education">Undergraduate</string>
    <string name="status">Available</string>
    <string name="favorite_genre">K-Pop</string>
    <string name="favorite_music_decade">80\'s</string>
    <string name="music_vibes">Chill</string>
    <string name="listening_freq">Frequent Listener</string>
    <string name="location_desc">Tangerang, Banten</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="i_already_have_an_account"><u>I already have an account</u></string>
    <string name="first_name">First Name</string>
    <string name="age">age</string>
    <string name="tv_gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="dob">Date of Birth</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="education_hint">Education</string>
    <string name="religion_hint">Religion</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="smoking_hint">Smoking</string>
    <string name="drinking_hint">Drinking</string>
    <string name="mbti_personality">MBTI Personality</string>
    <string name="love_language">Love Language</string>
    <string name="forward_action">Forward Action</string>
    <string name="hobby_and_interest">Hobby and Interest</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="tell_us_about_your_music_preference">Tell us about your music preference</string>
    <string name="genre">Genre</string>
    <string name="music_decade">Music Decade</string>
    <string name="music_vibe">Music Vibe</string>
    <string name="listening_frequency">Listening Frequency</string>
    <string name="concert">Concert</string>
    <string name="textview">TextView</string>
    <string name="upload_your_pictures">Upload your pictures</string>
    <string name="upload_up_to_6_images_minimum_4">Upload up to 6 images, minimum 4</string>
    <string name="imageview_action">Imageview action</string>
    <string name="your_profile_has_successfully_created">Your Profile has successfully created</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="logo">Logo</string>
    <string name="check">check</string>
    <string name="location_hint">Location</string>
    <string name="your_bio">Your Bio</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="matches">Matches</string>
    <string name="chats">Chats</string>

    <string name="send_action">Send Action</string>
    <string name="voice_note_action">Voice Note Action</string>
    <string name="send_image_action">Send Image Action</string>

    <string name="favor_artist">Favorite Artists</string>
    <string name="top_song">Top Songs</string>
    <string name="song_artist">New Jeans</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="this_is_a_received_message">This is a received message</string>
    <string name="user_name">User Name</string>
    <string name="name_and_age">%1$s, %2$d</string>

    <string name="profile_picture">Profile Picture</string>

    <string name="connect_spotify">Spotify Connect</string>
    <string name="spotify_activity">Spotify</string>
    <string name="title_activity_spotify">Spotify</string>
    <string name="button_spotify">Spotify Button</string>
    <string name="support_url">https://brynathn.github.io/melodate_support/</string>
    <string name="sent_image">Sent Image</string>
    <string name="received_image">Received Image</string>
    <string name="connect_to_listen">Connect to use play button</string>
    <string name="dark_mode_desc">Switch to Dark Mode</string>
    <string name="push_notification_desc">Get Notified</string>
    <string name="profile_image">Profile Image</string>


    <string-array name="status">
        <item>Single</item>
        <item>In a relationship</item>
    </string-array>

    <string-array name="religion">
        <item>Islam</item>
        <item>Protestant Christianity</item>
        <item>Roman Catholicism</item>
        <item>Hinduism</item>
        <item>Buddhism</item>
        <item>Confucianism</item>
    </string-array>

    <string-array name="education">
        <item>High School Diploma</item>
        <item>Undergraduate</item>
        <item>Associate\'s Degree</item>
        <item>Bachelor\'s Degree</item>
        <item>Master\'s Degree/PhD</item>
    </string-array>

    <string-array name="smoking">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="drinking">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="MBTI">
        <item>INTJ</item>
        <item>INTP</item>
        <item>ENTJ</item>
        <item>ENTP</item>
        <item>INFJ</item>
        <item>INFP</item>
        <item>ENFJ</item>
        <item>ENFP</item>
        <item>ISTJ</item>
        <item>ISFJ</item>
        <item>ESTJ</item>
        <item>ESFJ</item>
        <item>ISTP</item>
        <item>ISFP</item>
        <item>ESTP</item>
        <item>ESFP</item>
    </string-array>

    <string-array name="love_languages">
        <item>Acts of Service</item>
        <item>Physical Touch</item>
        <item>Quality Time</item>
        <item>Receiving Gifts</item>
        <item>Words of Affirmation</item>
    </string-array>

    <string-array name="music_genres">
        <item>Ballad</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Dangdut</item>
        <item>EDM (Electronic Dance Music)</item>
        <item>Hip-Hop/Rap</item>
        <item>Indie/Alternative</item>
        <item>Jazz</item>
        <item>J-Pop</item>
        <item>K-Pop</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Pop Indonesia</item>
        <item>Punk</item>
        <item>R&amp;B</item>
        <item>Reggae</item>
        <item>Rock</item>
        <item>Soul</item>
        <item>Traditional &amp; Folk Music</item>
    </string-array>

    <string-array name="music_decades">
        <item>1970s</item>
        <item>1980s</item>
        <item>1990s</item>
        <item>2000s</item>
        <item>2010s</item>
        <item>2020s</item>
    </string-array>

    <string-array name="music_vibes">
        <item>Upbeat and Energetic</item>
        <item>Relaxing and Chill</item>
        <item>Emotional and Deep</item>
        <item>Dark and Intense</item>
        <item>Romantic and Smooth</item>
    </string-array>

    <string-array name="listening_frequency">
        <item>Frequently</item>
        <item>Occasionally</item>
        <item>Rarely</item>
        <item>Never</item>
        <item>Only in specific situations</item>
    </string-array>

    <string-array name="concert_preferences">
        <item>Yes, I love attending concerts</item>
        <item>Sometimes, depending on the artist or event</item>
        <item>No, I prefer not to attend concerts</item>
    </string-array>


</resources>