<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/profile"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        style="@style/Heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <TextView
        android:id="@+id/latest_chat_message"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/lorem_ipsum"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/user_name" />


</androidx.constraintlayout.widget.ConstraintLayout>