<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <!-- Container for ImageView and TextView -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24"
        android:layout_gravity="center_vertical" />

        <!-- TextView for message -->
        <!-- Message Content -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Text Message -->
            <TextView
                android:id="@+id/tv_received_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/received_background"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/this_is_a_received_message"
                android:textSize="18sp"
                android:visibility="visible" />

            <!-- Image Message -->
            <ImageView
                android:id="@+id/iv_received_image"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@drawable/received_background"
                android:contentDescription="@string/received_image"
                android:elevation="4dp"
                android:maxWidth="250dp"
                android:maxHeight="300dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_profile"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
